# textecho

./: .dictation_config.example  .gitignore  CLAUDE.md  CLAUDE.md.archive  GNOME_EXTENSION_NOTES.md  MIGRATION_PLAN.md  README.md  ROADMAP.md  build_app.sh  build_dmg.sh  build_native_app.sh  build_native_dmg.sh  clean_test.sh  config.example.json  daemon_control.sh  daemon_control_mac.sh  daemon_manager.py  dictation_app.py  dictation_app_gtk.py  dictation_app_mac.py  dictation_daemon.py  dictation_dump.txt  dictation_overlay.py  export_quantized_whisper.sh  export_whisper_npu.sh  export_whisper_npu_py.py  export_whisper_ovc.py  input_monitor_mac.py  install_dev.sh  install_extension.sh  install_llm_backends.sh  intel-driver-compiler-npu_1.28.0.20251218-20347000698_ubuntu24.04_amd64.deb.asc  intel-fw-npu_1.28.0.20251218-20347000698_ubuntu24.04_amd64.deb.asc  intel-level-zero-npu_1.28.0.20251218-20347000698_ubuntu24.04_amd64-dbgsym.ddeb.asc  intel-level-zero-npu_1.28.0.20251218-20347000698_ubuntu24.04_amd64.deb.asc  launch_recorder.sh  llm_daemon.py  log_config.py  main.py  overlay_mac.py  (+15 more)
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml
DictationOverlay/: DictationOverlayHelper
TextEchoOverlay/: main.swift
assets/: DictationMac.icns  TextEcho.icns  generate_icon.py
claude_docs/: ARCHITECTURE.md  CHANGELOG.md  FEATURES.md  KNOWN_ISSUES.md  PLANNING.md  ROADMAP.md  SECURITY.md  TESTING.md  WORKLOG.md
docs/: SIGNING.md  architecture-diagram.excalidraw  index.html
launchd/: com.dictation.app.plist  com.dictation.llm.plist  com.dictation.transcription.plist  (+3 more)
tasks/: todo.md  (+1 more)
(+61 files in other folders)
