[project]
name = "textecho"
version = "0.1.0"
description = "Voice-to-text dictation tool with automatic silence detection, local Whisper transcription, and optional LLM processing"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Braxton Bragg", email = "braxcat@users.noreply.github.com"}
]
dependencies = [
    "lightning-whisper-mlx",
    "numpy>=2.0.0",
    "pyaudio>=0.2.14",
    "pynput>=1.8.1",
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Quartz",
    "pyobjc-framework-ApplicationServices",
    "soundfile>=0.13.1",
]

[project.optional-dependencies]
build = ["py2app"]
llm = ["llama-cpp-python"]
