[project]
name = "textecho"
version = "0.2.0"
description = "Voice-to-text dictation tool — optional LLM processing via llama-cpp-python"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Braxton Bragg", email = "braxcat@users.noreply.github.com"}
]
dependencies = []

[project.optional-dependencies]
llm = ["llama-cpp-python"]
